details of url on _config

--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,9 @@ description:      >
     This a blog from an oceanographer who became passionare about programming.
     I'm a dev, in love with data science that loves to write technical posts 
     about what I'm learning, specially Python, Django and Data Science stuff
-url:              http://localhost:3000
-baseurl:          # the optional subpath of your site, e.g. "/blog"
+
+url:              https://leportella.github.io
+baseurl:          /mywebsite # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
                   # other pages at root, see the paginate_path and
