--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ highlighter:      rouge
 
 # Setup
 title:            leportella
-tagline:          'a little bit about me'
+tagline:          a little bit about me
 description:      >
     This a blog from an oceanographer who became passionare about programming.
     I'm a dev, in love with data science that loves to write technical posts 
     about what I'm learning, specially Python, Django and Data Science stuff
 
 url:              "http://leportella.com" # no https
-baseurl:          "/mywebsite/" # the optional subpath of your site, e.g. "/blog"
+baseurl:          "/mywebsite" # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
                   # other pages at root, see the paginate_path and
